    to show the information for this handler. (Wengier)
  - Improved the compatibility of AUTOTYPE command with
    games like Asterix & Obelix. (Wengier)
  - The config options ttf.wpbg, ttf.bold, ttf.italic,
    ttf.underline, ttf.strikeout, and ttf.char512 can
    now be modified dynamically with CONFIG -SET ...
    commands, e.g. CONFIG -SET ttf.wpbg=2. (Wengier)
  - Added menu item "Save logging as..." (under "Help"
    -> "Debugging options") to save the current logging
    content to the specified file. (Wengier)
  - Added slirp backend support for the NE2000 network
    feature (in addition to the existing pcap backend).
    There are config sections named [ethernet, slirp]
    and [ethernet, pcap] now to set the options for the
    slirp and pcap backends respectively. Please refer
    to the networking guide in the DOSBox-X Wiki for
    more information about the backends. (Jookia)
  - FAT driver can now support PC-98 HDI images with
    partitions that start at any physical sector even
    if the start is not a multiple of the ratio of
    logical to physical sector size. This allows the
    HDI image of Dragon Knight 4 to mount.
  - With the setting "core=auto" DOSBox-X now updates
    the menu in the "CPU core" menu group automatically
    between "Normal core" and "Dynamic core" to reflect
    the CPU core which is currently in use. (Wengier)
  - Fixed Windows 95/98 installation failures caused by
    FAT driver and DOS API changes in previous version.
  - Fixed well-intended but erroneous fall through case
    in the INT15 handler that prevented 3rd party mouse
    drivers from detecting the PS/2 mouse.
  - Fixed the color issue with the Configuration Tool
    in the macOS SDL1 build. (ant_222)
  - Fixed switching ttf.cols, ttf.lins, and ttf.font
    options dynamically in full-screen mode. (Wengier)
  - Fixed setting option "ttf.wp=xy3" or "ttf.wp=xy4"
    not working (but "ttf.wp=xy" did work). (Wengier)